--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <java.version>21</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <lombok.version>1.18.36</lombok.version>
         <spring-cloud-aws.version>3.1.1</spring-cloud-aws.version>
         <cucumber.version>7.14.0</cucumber.version>
