--- a/.github/workflows/build-push-ecr.yaml
+++ b/.github/workflows/build-push-ecr.yaml
@@ -22,6 +22,7 @@ jobs:
       )
     with:
       ref: ${{ github.event.workflow_run.head_branch }}
+      ecr-repository-name: ${{ vars.ECR_REPOSITORY_NAME }}
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
